# BulkCropper

./: .gitignore  README.md  pyproject.toml
docs/: CHANGELOG.md  config-guide.md  dev-insight.md  roadmap.md
docs/integrations/: brickognize.md
src/BulkCropper/: cli.py  pipeline.py
src/BulkCropper/core/: config.py  cropper.py  debug.py  detector.py  io.py  preprocessing.py  utils.py
src/BulkCropper/crop/: config.py  debug.py  io.py  pipeline.py  preprocessing.py
src/BulkCropper/find/: api.py  cache.py  config.py  io.py  pipeline.py
src/BulkCropperGUI/: app.py
src/BulkCropperGUI/controllers/: pipeline_controller.py
src/BulkCropperGUI/services/: output_scanner.py
src/BulkCropperGUI/widgets/: details_panel.py  explorer.py  flow_layout.py  image_card.py  sidebar.py
src/BulkCropperGUI/windows/: main_window.py
