[project]
name = "BulkCropper"
version = "1.0.0"
description = "Crop an image into multiple items"
authors = [{ name = "C. Bernard", email = "cfr.bernard@yahoo.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "opencv-python",
    "numpy"
]

[project.optional-dependencies]
dev = [
]

[project.scripts]
BulkCropper = "BulkCropper.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

# --- FUTUR SETUP (if needed) ---
#
# [tool.mypy]
# python_version = "3.13"
# ignore_missing_imports = true
# disallow_untyped_defs = false
# show_error_codes = true
# pretty = true
# exclude = "^tests/fixtures/"
# 
# [[tool.mypy.overrides]]
# module = ["tkinterdnd2-universal"]
# ignore_missing_imports = true
# 
# [tool.pytest.ini_options]
# addopts = "-ra"
# testpaths = ["tests"]
# 
# [tool.ruff]
# line-length = 100
# target-version = "py313"
# 
# [tool.black]
# line-length = 100
# target-version = ['py313']
